2008-08-09  Daniel Pfeiffer  <occitan@esperanto.org>

Snapshot makepp-1.50-cvs-080810.tgz, version 1.50-08093-08048-07303 on CPAN.

	* BuildCache.pm:
	* FileInfo*.pm: Use POSIX::S_IS* instead of hard wired non portable
	constants.

	* pod/makepp_release_notes.pod:
	* pod/makepp_compatibility.pod: Document z/OS as mostly working.

2008-08-04  Daniel Pfeiffer  <occitan@esperanto.org>

	* Makefile.pm, t/perl.test: Abolish the undocumented fancy
	renaming of only '.' to '_dot_'.

	* makepp (find_makepp_info, ..._register): Abolish wrapper useful
	only when file_info was object oriented.

	* Makesubs.pm: Directly get my $cwd, when that was all $makefile
	was used for.

	* *: Don't call unquote_split_on_whitespace in loops which can
	call both parts directly.  'my $x =' and '$x =~' is cheaper than
	'local $_ =' is cheaper than 'local *_ = \' is cheaper than 'for'.

	* t/builtins.test: Test &cut -p.

	* t/run_tests.pl: Use getopts and make installed makepp or mpp
	testable again.

	* t/run_all.t (-?, -S): New options.

2008-07-30  Daniel Pfeiffer  <occitan@esperanto.org>

	* ActionParser.pm (add_any_dependency_):
	* BuildCheck/exact_match.pm (build_check):
	* Glob.pm (zglob_fileinfo):
	* Makefile.pm (load):
	* Scanner.pm (find):
	* FileInfo.pm (file_info): Handle simple file names efficiently.
	(path_file_info): Renames old file_info.  No longer takes a ref --
	adapted the three calling places.  Handle C:\temp/foo on Windows
	and //bin/ls not as a server share.

	* FileInfo_makepp.pm (update_build_infos): Inline minimal file_info.

	* Makesubs.pm (f_*_filename): Optimize.

	* t/run_tests.pl (un_spar): Simplify.

	* pod/makepp_builtins.pod, t/builtins.test: Document and test -r0.

2008-07-19  Daniel Pfeiffer  <occitan@esperanto.org>

	* Repository.pm: Revert code to package FileInfo, because it uses
	it so much, and because some symbols hadn't been qualified.

	* FileInfo_makepp.pm (version): Give same output as installed beta.

	* config.pl: