@@ -1,3 +1,10 @@
+	* makeppgraph (--up, --down): Accept these advertised options.
+
+2008-08-19  Daniel Pfeiffer  <occitan@esperanto.org>
+
+	* FileInfo_makepp.pm (exists_or_can_be_built_or_remove): Treat
+	chmod 0 as inexstant, rather than internal error.
+
 2008-08-09  Daniel Pfeiffer  <occitan@esperanto.org>
 
 Snapshot makepp-1.50-cvs-080810.tgz, version 1.50-08093-08048-07303 on CPAN.
@@ -15,7 +22,7 @@ Snapshot makepp-1.50-cvs-080810.tgz, version 1.50-08093-08048-07303 on CPAN.
 	renaming of only '.' to '_dot_'.
 
 	* makepp (find_makepp_info, ..._register): Abolish wrapper useful
-	only when file_info was object oriented.
+	only when FileInfo was object oriented.
 
 	* Makesubs.pm: Directly get my $cwd, when that was all $makefile
 	was used for.
@@ -151,7 +158,7 @@ Snapshot makepp-1.50-cvs-080810.tgz, version 1.50-08093-08048-07303 on CPAN.
 	recursive make to separate modules.
 
 	* t/run_tests.pl:
-	* makepp (makepprc): Look for and load file .makepp.
+	* makepp (makepprc): Look for and load file .makepprc.
 	(usage): Inline it, putting text into DATA section to save memory.
 
 	* Makecmds.pm (frame):
